syntax = "proto3";

package JC;

message Class {
    string id = 1;
    string name = 2;

    enum Type{
        PUBLIC = 0;
        REQUIRED = 1;
        OPTIONAL = 2;
    }
    Type type = 3;

    double timeClass = 4;
    double timeExper = 5;

    double credit = 6;
    string term = 7;
}